--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "b076df6f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "from keras.layers import Dense, Conv2D , MaxPool2D , Flatten , Dropout , BatchNormalization\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report,confusion_matrix\n",
+    "from sklearn.metrics import classification_report,confusion_matrix, f1_score, balanced_accuracy_score\n",
     "from keras.callbacks import ReduceLROnPlateau\n",
     "import cv2 # pip install opencv-python\n",
     "import os"
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4152b064",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,14 @@
       "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 852ms/step - accuracy: 0.9669 - loss: 0.1106\n",
       "Epoch 9: ReduceLROnPlateau reducing learning rate to 2.700000040931627e-05.\n",
       "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 854ms/step - accuracy: 0.9669 - loss: 0.1106 - val_accuracy: 0.5000 - val_loss: 5.2528 - learning_rate: 9.0000e-05\n",
-      "Epoch 10/12\n"
+      "Epoch 10/12\n",
+      "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m77s\u001b[0m 468ms/step - accuracy: 0.9646 - loss: 0.1007 - val_accuracy: 0.7500 - val_loss: 0.8150 - learning_rate: 2.7000e-05\n",
+      "Epoch 11/12\n",
+      "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m97s\u001b[0m 596ms/step - accuracy: 0.9694 - loss: 0.0852 - val_accuracy: 0.7500 - val_loss: 0.8340 - learning_rate: 2.7000e-05\n",
+      "Epoch 12/12\n",
+      "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 404ms/step - accuracy: 0.9653 - loss: 0.1017\n",
+      "Epoch 12: ReduceLROnPlateau reducing learning rate to 8.100000013655517e-06.\n",
+      "\u001b[1m163/163\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m66s\u001b[0m 406ms/step - accuracy: 0.9653 - loss: 0.1017 - val_accuracy: 0.6875 - val_loss: 0.5269 - learning_rate: 2.7000e-05\n"
      ]
     }
    ],
@@ -724,13 +731,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "7bda6b56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 65ms/step\n",
+      "\u001b[1m20/20\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 66ms/step - accuracy: 0.9025 - loss: 0.2716\n",
+      "F1 score of the model is -  0.8788501026694046\n",
+      "Balanced Accuracy of the model is -  0.9072649572649573 %\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Loss of the model is - \" , model.evaluate(x_test,y_test)[0])\n",
-    "print(\"Accuracy of the model is - \" , model.evaluate(x_test,y_test)[1]*100 , \"%\")"
+    "y_pred = (model.predict(x_test) > 0.5).astype(\"int32\")  # Thresholding for binary classification\n",
+    "loss, accuracy = model.evaluate(x_test, y_test)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "balanced_accuracy = balanced_accuracy_score(y_test, y_pred)\n",
+    "print(\"F1 score of the model is - \" , f1)\n",
+    "print(\"Balanced Accuracy of the model is - \" , balanced_accuracy, \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "653f265b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the entire model (architecture + weights + optimizer state)\n",
+    "model.save('part2_cnn_model.h5')"
    ]
   }
  ],
